--- a/style.css
+++ b/style.css
@@ -1,3 +1,62 @@
+ 
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+.q-font{
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    background-color: black;
+    color: white;
+}
+
 body{
-    background-color:palevioletred;
+    width: 100vw;
+    height: 100vh;
+}
+
+#home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+#section1{
+    border:white 2px solid;
+    width:40%;
+    height: 100%;
+
+    padding: 20px;
+
+    
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+#about{
+   
+}
+
+#socials{
+    flex-direction: row;
+}
+#socials a{
+    text-decoration: none;
+
+    
+}
+
+ 
+#section2{
+    border:white 2px solid;
+    width:60%;
+    height: 100%;
 }
