--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     padding: 0;
     box-sizing: border-box;
 
-    background-color: black;
+    background-color: #393E46;
     color: white;
 }
 
@@ -24,12 +24,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     width: 100vw;
     height: 100vh;
 }
 
 #section1{
-    border:white 2px solid;
+    border-right:solid 0.1px rgba(255, 255, 255, 0.058);
     width:40%;
     height: 100%;
 
@@ -42,21 +43,98 @@ body{
 }
 
 #about{
+    background-color: #222831;
    
 }
 
 #socials{
     flex-direction: row;
+    background-color: #222831;
 }
+
+.icard{
+     
+     
+    border-radius: 12px;
+    padding: 10px;
+    /* border:solid 0.1px rgba(255, 255, 255, 0.554); */ 
+}
+ 
 #socials a{
     text-decoration: none;
+     
 
     
 }
 
  
 #section2{
-    border:white 2px solid;
+    
     width:60%;
     height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    
+}
+
+#projects{
+    display: flex;
+    flex-direction: column;
+    gap: 20px
+}
+
+.project{
+    display: flex;
+    flex-direction: row;
+    border:solid 0.1px rgba(255, 255, 255, 0.554);
+    border-radius: 12px;
+    padding: 10px;
+    gap:15px;
+    background-color: #222831;
+} 
+.project .description{
+    display: flex;
+    gap:20px;
+    flex-direction: column;
+    background-color: #222831;
+}
+
+.description a{
+    text-decoration: none;
+}
+
+.project img{
+    width: 200px;
+    height: 200px;
+    background-color: #222831;
+    object-fit: contain;
+}
+ 
+
+@media (max-width: 800px) {
+    #section1, #section2 {
+        width: 100%; /* Full width for smaller screens */
+        height: auto; /* Adjust height to content */
+        border-right: none; /* Remove border for better appearance */
+    }
+    #section1{
+    
+    border-bottom:solid 0.1px rgba(255, 255, 255, 0.058) ;
+    }
+    #home {
+        flex-direction: row; /* Stack sections vertically on smaller screens */
+    }
+}
+
+@media (max-width: 500px){
+    .project{
+        flex-direction: column-reverse;
+        
+    }
+
+    .icard{
+        padding: 4px;
+    }
 }
